[package]
name = "athena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = [ "derive" ] }
colored = "2.0.0"
lz-str = "0.2.1"
reqwest = { version = "0.11.13", features = [ "blocking", "json" ] }
serde = { version = "1.0.152", features = [ "derive" ] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",           
    "fast-rng",      
    "macro-diagnostics", 
]
